--- a/client/src/styles/partials/_variables.scss
+++ b/client/src/styles/partials/_variables.scss
@@ -10,6 +10,7 @@ $font: "Urbanist", sans-serif;
 
 // colors: 
 $PolyBlue: #004E98;
+$DarkBlue: #072644;
 $BiceBlue: #3A6EA5;
 $Silver: #C0C0C0;
 $AntiWhite: #EBEBEB;
@@ -17,4 +18,5 @@ $LightBlue: #B8D8D8;
 $CadetGray: #8FAAAA;
 $Red: #BF1A2F;
 $Beige: #EEF5DB;
-$Black: #13182c;
+$Black: #14182a;
+$DarkBlack: #000000;
