create backup up to creator and images joins

--- a/client/src/styles/partials/_variables.scss
+++ b/client/src/styles/partials/_variables.scss
@@ -17,6 +17,6 @@ $AntiWhite: #EBEBEB;
 $LightBlue: #B8D8D8;
 $CadetGray: #8FAAAA;
 $Red: #BF1A2F;
-$Beige: #EEF5DB;
+$Beige: rgb(238, 245, 219, 0.5);
 $Black: #14182a;
 $DarkBlack: #000000;
