--- a/client/src/components/DesignCard/DesignCard.scss
+++ b/client/src/components/DesignCard/DesignCard.scss
@@ -5,6 +5,7 @@
 .design-card {
     background-color: $AntiWhite;
     width: 90%;
+    max-width: 250px;
     align-self: center;
     margin: 16px;
     border-radius: 20px;
@@ -13,8 +14,13 @@
     &__img {
         background-color: $Silver;
         width: 100%;
-        // height: 100%;
+        height: 100%;
         height: 250px;
+        object-fit: cover;
+
+        @include tablet {
+
+        }
     }
 
     & div {
