--- a/client/src/pages/HomePage/HomePage.scss
+++ b/client/src/pages/HomePage/HomePage.scss
@@ -2,12 +2,36 @@
 @use "../../styles/partials/variables" as *;
 @use "../../styles/partials/mixins" as *;
 
-.home-page{
+.home-page {
     background-color: $Beige;
     display: flex;
     flex-direction: column;
 
-    &__title{
+    &__title {
         padding: 16px;
+
+        @include desktop {
+            width: 1080px;
+            margin-left: auto;
+            margin-right: auto;
+        }
+    }
+
+    &__card-container {
+        justify-content: center;
+        display: flex;
+        flex-direction: column;
+
+        @include tablet {
+            flex-direction: row;
+            flex-wrap: wrap;
+        }
+
+
+        @include desktop {
+            max-width: 1080px;
+            margin-left: auto;
+            margin-right: auto;
+        }
     }
 }
