set up login modal hmtl

--- a/client/src/components/DesignCard/DesignCard.scss
+++ b/client/src/components/DesignCard/DesignCard.scss
@@ -3,7 +3,7 @@
 @use "../../styles/partials/variables" as *;
 
 .design-card {
-    background-color: $AntiWhite;
+    background-color: white;
     width: 90%;
     max-width: 250px;
     align-self: center;
