--- a/client/src/components/Header/Header.scss
+++ b/client/src/components/Header/Header.scss
@@ -72,6 +72,7 @@ header{
     &__login {
         margin-left: 1rem;
         align-self: center;
+        text-wrap: nowrap;
 
         &:hover {
             color: $DarkBlack;
