--- a/client/src/pages/HomePage/HomePage.scss
+++ b/client/src/pages/HomePage/HomePage.scss
@@ -3,7 +3,7 @@
 @use "../../styles/partials/mixins" as *;
 
 .home-page {
-    background-color: $Beige;
+    background-color: $AntiWhite;
     display: flex;
     flex-direction: column;
 
