--- a/client/src/pages/HomePage/HomePage.scss
+++ b/client/src/pages/HomePage/HomePage.scss
@@ -11,7 +11,7 @@
         padding: 16px;
 
         @include desktop {
-            width: 1080px;
+            width: $maxW;
             margin-left: auto;
             margin-right: auto;
         }
@@ -23,13 +23,15 @@
         flex-direction: column;
 
         @include tablet {
+            justify-content: unset;
+            gap: 30% 3%;
             flex-direction: row;
             flex-wrap: wrap;
         }
 
 
         @include desktop {
-            max-width: 1080px;
+            max-width: $maxW;
             margin-left: auto;
             margin-right: auto;
         }
