--- a/client/src/components/DesignCard/DesignCard.scss
+++ b/client/src/components/DesignCard/DesignCard.scss
@@ -10,6 +10,11 @@
     margin: 16px;
     border-radius: 20px;
     overflow: hidden;
+    box-shadow: 4px 4px 8px 0 rgba(0,0,0,0.2);
+
+    &:hover {
+        box-shadow: 4px 8px 12px 4px rgba(0,0,0,0.2);
+    }
 
     &__img {
         background-color: $Silver;
