--- a/client/src/components/DesignCard/DesignCard.scss
+++ b/client/src/components/DesignCard/DesignCard.scss
@@ -4,27 +4,34 @@
 
 .design-card {
     background-color: white;
-    width: 90%;
-    max-width: 185px;
+    width: 250px;
     align-self: center;
     margin: 16px;
-    border-radius: 20px;
+    border-radius: 15px;
     overflow: hidden;
     box-shadow: 4px 4px 8px 0 rgba(0,0,0,0.2);
+
+    @include tablet {
+        width: 185px;
+    }
 
     &:hover {
         box-shadow: 4px 8px 12px 4px rgba(0,0,0,0.2);
         cursor: pointer;
     }
 
+    &__link {
+        text-decoration: none;
+    }
+
     &__img {
         background-color: $Silver;
         width: 100%;
-        height: 185px;
+        height: 250px;
         object-fit: cover;
 
         @include tablet {
-
+            height: 185px;
         }
     }
 
