--- a/client/src/pages/UserPage/UserPage.scss
+++ b/client/src/pages/UserPage/UserPage.scss
@@ -7,7 +7,9 @@
     
     &__carousel {
         & li {
-            max-width: 300px !important;
+            @include tablet {
+                max-width: 220px !important;
+            }
         }
         
     }
