--- a/client/src/pages/DetailsPage/DetailsPage.scss
+++ b/client/src/pages/DetailsPage/DetailsPage.scss
@@ -3,9 +3,37 @@
 @use "../../styles/partials/mixins" as *;
 
 .design-details {
+    display: flex;
+    flex-direction: column;
+
+    @include tablet {
+        flex-direction: row; 
+    }
+
+    &__hero-image{
+        max-width: 50%
+    }
 
     &__images {
-       width: 20%; 
+       width: 100%; 
 
     }
+
+    &__carousel {
+        & li {    
+        max-width: 50px !important;
+        }
+    }
+
+    &__title {
+       order: 2; 
+    }
+}
+
+.react-multi-carousel-list {
+    @include mobile{
+        width: 100%;}
+
+    @include tablet{
+        width: 50%; }
 }
