--- a/client/src/styles/partials/_variables.scss
+++ b/client/src/styles/partials/_variables.scss
@@ -16,7 +16,8 @@ $Silver: #C0C0C0;
 $AntiWhite: #EBEBEB;
 $LightBlue: #B8D8D8;
 $CadetGray: #8FAAAA;
-$Red: #BF1A2F;
+$RustyRed: #DE3C4B;
+$SeaGreen: #3E885B;
 $Beige: rgb(238, 245, 219, 0.5);
 $Black: #14182a;
 $DarkBlack: #000000;
