--- a/client/src/styles/partials/_mixins.scss
+++ b/client/src/styles/partials/_mixins.scss
@@ -17,3 +17,21 @@
         @content;
     }
 }
+
+@mixin heading {
+    font-size: 25rem;
+    line-height: 1.5rem;
+    font-weight: 600;
+}
+
+@mixin subheading {
+    font-size: 1.5rem;
+    line-height: 1rem;
+    font-weight: 550;
+}
+
+@mixin text {
+    font-size: 1rem;
+    line-height: 1.5rem;
+    font-weight: 400;
+}
