--- a/client/src/components/DesignCard/DesignCard.scss
+++ b/client/src/components/DesignCard/DesignCard.scss
@@ -9,14 +9,15 @@
     margin: 16px;
     border-radius: 15px;
     overflow: hidden;
-    box-shadow: 4px 4px 8px 0 rgba(0,0,0,0.2);
+    box-shadow: 0 0 8px 1px rgba(0,0,0,0.2);
+    border: 1px solid rgb(143, 170, 170, 0.4);
 
     @include tablet {
         width: 185px;
     }
 
     &:hover {
-        box-shadow: 4px 8px 12px 4px rgba(0,0,0,0.2);
+        box-shadow: 0 0 10px 3px rgba(0,0,0,0.2);
         cursor: pointer;
     }
 
@@ -29,6 +30,7 @@
         width: 100%;
         height: 250px;
         object-fit: cover;
+        border-bottom: 1px solid rgb(143, 170, 170, 0.2);
 
         @include tablet {
             height: 185px;
