--- a/client/src/styles/partials/_mixins.scss
+++ b/client/src/styles/partials/_mixins.scss
@@ -18,10 +18,27 @@
     }
 }
 
+@mixin format {
+    min-height: 100vh;
+    padding: 0 16px;
+
+    @include tablet {
+        padding: 0 32px;
+    }
+
+    @include desktop {
+        padding: 0 64px;
+        margin: 0 auto;
+        width: 100%;
+        max-width: $maxW;
+    }
+}
+
 @mixin heading {
-    font-size: 25rem;
+    font-size: 2rem;
     line-height: 1.5rem;
     font-weight: 600;
+    margin: 16px 0 8px;
 }
 
 @mixin subheading {
