--- a/client/src/components/Header/Header.scss
+++ b/client/src/components/Header/Header.scss
@@ -92,7 +92,7 @@ header{
 
         &:hover {
             cursor: pointer;
-            border-bottom: 1px solid $Black;
+            font-weight: 600;
         }
     }
 
