--- a/client/src/pages/DetailsPage/DetailsPage.scss
+++ b/client/src/pages/DetailsPage/DetailsPage.scss
@@ -8,7 +8,7 @@
     &__design-btn {
         margin: 10px 16px;
         padding: 0.3rem;
-        background-color: rgb(184, 216, 216, 0.5);
+        background-color: $LightBlueL;
         border-radius: 50%;
 
         @include tablet {
@@ -16,7 +16,7 @@
         }
 
         &:hover {
-            background-color: rgb(143, 170, 170, 0.5);
+            background-color: $CadetGrayL;
             cursor: pointer;
         }
     }
@@ -33,6 +33,8 @@
 
     &__img-container {
         width: 100%;
+        display: flex;
+        flex-direction: column;
 
         @include tablet {
             width: 50%;
@@ -44,6 +46,7 @@
         padding: 1rem;
         max-height: 80vh;
         width: auto;
+        align-self: center;
 
         @include tablet {
             padding: 1rem 1rem 1rem 0;
@@ -101,13 +104,14 @@
         }
     }
 
-    &__text {
+    &__text-container {
         margin: 16px 10px;
         padding: 16px;
         background-color: rgba(184, 216, 216, 0.5);
         border-radius: 20px;
         position: relative;
         width: 95%;
+        display: flex;
 
         @include tablet {
             width: 100%;
@@ -115,13 +119,27 @@
             margin: 16px 0 auto 32px;
         }
     }
+
+    &__modal-container{
+        width: 100%;
+        margin-right: 32px;
+    }
+
+    &__text-title{
+        padding-right: 8px;
+
+        & p {
+            @include text;
+        }
+    }
+
+    &__text {
+        & p {
+            @include text;
+        }  
+    }
 }
 
 .react-multi-carousel-list {
-    // border-bottom: 2px solid $CadetGray;
     padding-bottom: 16px;
-
-    // @include tablet {
-    //     border-bottom: none;
-    // }
 }
