--- a/client/src/styles/partials/_variables.scss
+++ b/client/src/styles/partials/_variables.scss
@@ -11,17 +11,18 @@ $font: "Urbanist", sans-serif;
 // colors: 
 $Black: #14182a;
 $LightBlue: #B8D8D8;
+$LightBlueL: rgb(184, 216, 216, 0.5);
+$CadetGray: #8FAAAA;
+$CadetGrayL: rgb(143, 170, 170, 0.5);
+$RustyRed: #DE3C4B;
+$SeaGreen: #3E885B;
 
+
+$Beige: rgb(238, 245, 219, 0.5);
 $PolyBlue: #004E98;
 $DarkBlue: #072644;
 $BiceBlue: #3A6EA5;
 $Silver: #C0C0C0;
 $AntiWhite: #EBEBEB;
-
-$CadetGray: #8FAAAA;
-$RustyRed: #DE3C4B;
-$SeaGreen: #3E885B;
-$Beige: rgb(238, 245, 219, 0.5);
-
 
 $maxW: 1250px
