--- a/client/src/pages/UserPage/UserPage.scss
+++ b/client/src/pages/UserPage/UserPage.scss
@@ -39,6 +39,7 @@
 
 .react-multiple-carousel__arrow {
     background-color: rgb(184, 216, 216, 0.8) !important;
+    z-index: 1 !important;
 
     &:hover{
         background-color: rgb(143, 170, 170, 0.8) !important;
