create fully functional edit user function - including updating avatar image

--- a/client/src/components/EditUser/EditUser.scss
+++ b/client/src/components/EditUser/EditUser.scss
@@ -6,6 +6,15 @@
     z-index: 2;
 }
 
-// .edit{
+.edit{
 
-// }
+    &__avatar{
+        height: 40px;
+        width: 40px;
+        border-radius: 50%;
+        background-color: $AntiWhite;
+        margin-left: 1rem;
+        align-self: center;
+        border: 1px solid $CadetGray;
+    }
+}
