--- a/client/src/components/SignUp/SignUp.scss
+++ b/client/src/components/SignUp/SignUp.scss
@@ -3,22 +3,22 @@
 @use "../../styles/partials/variables" as *;
 @use "../Login/Login.scss" as *;
 
-.Modal {
-    position: absolute;
-    inset: 40px;
-    border: 1px solid rgb(204, 204, 204);
-    background: rgb(255, 255, 255);
-    overflow: auto;
-    border-radius: 4px;
-    outline: none;
-    padding: 20px;
+// .Modal {
+//     position: absolute;
+//     inset: 40px;
+//     border: 1px solid rgb(204, 204, 204);
+//     background: rgb(255, 255, 255);
+//     overflow: auto;
+//     border-radius: 4px;
+//     outline: none;
+//     padding: 20px;
 
-    @include tablet {
-        max-width: 800px;
-        margin-left: auto;
-        margin-right: auto;
-    }
-}
+//     @include tablet {
+//         max-width: 800px;
+//         margin-left: auto;
+//         margin-right: auto;
+//     }
+// }
 
 .sign-up {
 
