--- a/client/src/components/Header/Header.scss
+++ b/client/src/components/Header/Header.scss
@@ -58,10 +58,10 @@ header{
     &__search-container {
         display: flex;
         background-color: white;
-        width: 90%;
+        width: 100%;
         border-radius: 20px;
         border: 1px solid $CadetGray;
-        height: max-content;
+        // height: max-content;
 
         &:focus-within {
             border: 2px solid $CadetGray;
@@ -80,8 +80,13 @@ header{
 
         }
 
-        & img {
-            margin-right: 0.5rem;
+        & button {
+            // margin-right: 0.5rem;
+            border: none;
+            background-color: transparent;
+            align-self: center;
+            align-items: center;
+    display: flex;
         }
     }
 
