--- a/client/src/components/EditUser/EditUser.scss
+++ b/client/src/components/EditUser/EditUser.scss
@@ -27,7 +27,6 @@
 
     &__avatar-label{
         display: flex;
-        // flex-direction: column;
     }
 
     &__avatar{
@@ -38,6 +37,7 @@
         margin-right: 1rem;
         align-self: center;
         border: 1px solid $CadetGray;
+        object-fit: cover;
     }
 
     &__avatar-upload{
