--- a/client/src/components/Header/Header.scss
+++ b/client/src/components/Header/Header.scss
@@ -109,6 +109,7 @@ header{
         margin-left: 1rem;
         align-self: center;
         border: 1px solid $CadetGray;
+        object-fit: cover;
 
         &:hover {
             box-shadow: 0px 0px 8px 2px rgba(0, 0, 0, 0.2);
